@@ -1,4 +1,5 @@
 bad_md5 = [
+        'dd5deb327f566599e9ca34350a65944a',
         'sentinel'
 ]
 
