@@ -8,6 +8,7 @@ good_md5 = [
         '28c67543843fbc947af83bc15eef9751',
         '7431e632bcb1d337e8f25b557b1fadb0',
         '7caa470ed96254f041d8fe0e9968d587',
+        'cc3c4720f3a9b26aedd24ca63d1523c1',
         'd1a9f3894e7d857c82ca73434133542e',
         'e697552e5ce85665e109c45115b2334b',
         'sentinel'
