@@ -6,6 +6,7 @@ good_md5 = [
         '49117e615e3939e3eb3fc3e806398901',
         '50210f7d91032bfc919920d590b359b7',
         '8570b9585541206d5e5ce1bf23ac31f4',
+        '8ac93979d41d4bd9de5831922a5bee7b',
         'a02d6773cef8517f744eaca4cbcb515b',
         'sentinel'
 ]
