@@ -22,6 +22,7 @@ New in SVN
 * Reopened Issue 337: Bad layout with inline images in tables
 * Marked Issue 358 as fixed.
 * Fixed Issue 410: always include full lines in code-blocks (mmueller patch)
+* Regression in stylesheet includes: Issue 483
 
 New in 0.92
 -----------
